@@ -26,10 +26,7 @@
 			<fieldset class="t3-install-form-submit">
 				<ol>
 					<li>
-						<button type="submit" name="TYPO3_INSTALL[update][###IDENTIFIER###]">
-							###NEXT###
-							<span class="t3-install-form-button-icon-positive">&nbsp;</span>
-						</button>
+						###NEXT###
 					</li>
 				</ol>
 			</fieldset>
